Se añade archivo contacto.html y recetas en submenu

--- a/misRecetas/magro-tomates.html
+++ b/misRecetas/magro-tomates.html
@@ -31,9 +31,29 @@
                 <h2>Magro con Tomates</h2>
                 <img src="../images/magro-tomates.jpg" alt="Magro con tomates" width="65%">
                 <h3>Descripción</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Nesciunt et nostrum necessitatibus ratione? Rerum doloribus harum quo qui nisi assumenda! Cumque quae, ipsa maxime sed atque quibusdam delectus esse nulla.
+                <p>
+                    El magro con tomates es una receta tradicional andaluza, muy popular en los bares de Málaga como tapa casera y sabrosa. 
+                    Se elabora con carne magra de cerdo guisada lentamente con pimientos, cebolla y una rica salsa de tomate natural. 
+                    El resultado es un plato tierno, jugoso y lleno de sabor mediterráneo, ideal para acompañar con pan o unas papas fritas.
                 </p>
+            
+                <h4>🥗 Información nutricional aproximada (por ración):</h4>
+                <ul>
+                    <li><strong>Calorías:</strong> 300–400 kcal</li>
+                    <li><strong>Proteínas:</strong> 30–35 g</li>
+                    <li><strong>Grasas:</strong> 15–20 g (principalmente saludables si se usa AOVE)</li>
+                    <li><strong>Hidratos de carbono:</strong> 8–12 g</li>
+                </ul>
+                
+                <h4>🍅 Vitaminas y minerales:</h4>
+                <ul>
+                    <li><strong>Vitamina C:</strong> aportada por pimientos y tomates, refuerza el sistema inmunológico</li>
+                    <li><strong>Licopeno:</strong> antioxidante presente en el tomate cocinado, con propiedades protectoras</li>
+                    <li><strong>Vitaminas del grupo B:</strong> presentes en la carne magra, importantes para el sistema nervioso</li>
+                    <li><strong>Hierro y zinc:</strong> esenciales para el metabolismo y el sistema inmunitario</li>
+                </ul>
+
+                <p>Un plato humilde, reconfortante y lleno de historia, perfecto para compartir en una mesa con pan y buena compañía. Ideal como tapa, plato principal o para llevar en táper.</p>
             </div>
         </div>
 
