--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -1,6 +1,6 @@
-<div id="banner">
+<!-- <div id="banner">
     <img src="../images/vegetales.jpg">
-</div>  
+</div>   -->
 
 <!-- Bloque que contiene el menú de navegación y el logo con su título -->
 <div class="menu-logo">
@@ -11,15 +11,24 @@
     <nav class="menu">
         <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="../index.html#misRecetas">Recetas</a></li>
-
-            <li><a href="#">Contacto</a>
+            <li><a href="../index.html#misRecetas">Recetas</a>
                 <!-- Submenú -->
                 <ul>
-                    <li><a href="#">Ítem 1</a></li>
-                    <li><a href="#">Ítem 2</a></li>
+                    <li><a href="./emblanco.html#pasos">En blanco</a></li>
+                    <li><a href="./sopa_caldo_encima.html#pasos">Sopa de caldo "poncima"</a></li>
+                    <li><a href="./pure-verduras.html#pasos">Puré de verduras</a></li>
+                    <li><a href="./magro-tomates.html#pasos">Magro con tomates</a></li>
+                    <li><a href="./gazpachuelo.html#pasos">Gazpachuelo</a></li>
+                    <li><a href="./lentejas.html#pasos">Lentejas</a></li>
+                    <li><a href="./habichuelas.html#pasos">Potaje de habichuelas</a></li>
+                    <li><a href="./cazuela-costilla.html#pasos">Cazuela de patatas con costilla</a></li>
+                    <li><a href="./cazuela-pollo.html#pasos">Cazuela de patatas con pollo</a></li>
+                    <li><a href="./cazuela-arroz.html#pasos">Cazuela de arroz</a></li>
+                    <li><a href="./cazuela-fideos.html#pasos">Cazuela de fideos</a></li>
                 </ul>
             </li>
+
+            <li><a href="./contacto.html">Contacto</a></li>
         </ul>
 
         <!-- Buscador -->
