se añade imagen cazuela-arroz

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/cazuela-arroz.html#pasos"><img src="./images/defecto.png" alt="Cazuela de arroz"></a>
+                    <a href="./misRecetas/cazuela-arroz.html#pasos"><img src="./images/cazuela-arroz.jpg" alt="Cazuela de arroz"></a>
                     <p>Cazuela de arroz</p>
                 </div> 
 
