--- a/misRecetas/cazuela-arroz.html
+++ b/misRecetas/cazuela-arroz.html
@@ -35,7 +35,7 @@
         <div class="pasos">
             <div>
                 <h2>Cazuela de arroz</h2>
-                <img src="../images/defecto.png" alt="sopa caldo por encima" width="65%">
+                <img src="../images/cazuela-arroz.jpg" alt="Cazuela de arroz" width="65%">
                 <h3>Descripción</h3>
                 <p>La cazuela de arroz o arroz caldoso con marisco o conejo es un plato típico de la comarca del Valle del Guadalhorce, se hace también con fideos, muy típico en zonas rurales de Pizarra y Coín.</p>
                 <p>Es un plato completo, sabroso y lleno de nutrientes, ideal como comida principal.</p>
