--- a/misRecetas/cazuela-costilla.html
+++ b/misRecetas/cazuela-costilla.html
@@ -35,7 +35,7 @@
         <div class="pasos">
             <div>
                 <h2>Cazuela de patatas (con costilla)</h2>
-                <img src="../images/defecto.png" alt="sopa caldo por encima" width="65%">
+                <img src="../images/defecto.png" alt="Cazuela de patatas con costilla" width="65%">
                 <h3>Descripción</h3>
                 <p>Esta cazuela de patatas con costilla de cerdo es un plato completo y reconfortante, ideal para disfrutar en familia.</p>
                 <p>Aporta proteínas de alta calidad gracias a la carne, carbohidratos complejos de las patatas y un buen equilibrio de vitaminas y minerales procedentes de las verduras como la zanahoria, el tomate y el pimiento.</p>
