--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -35,7 +35,7 @@
         <div class="pasos">
             <div>
                 <h2>Potaje de habichuelas o fabada</h2>
-                <img src="../images/habichuelas.png" alt="Lentejas" width="65%">
+                <img src="../images/habichuelas.png" alt="Fabada o habichuelas" width="65%">
                 <h3>Descripción</h3>
                 <p>
                     El potaje de habichuelas, o fabada, es una excelente fuente de nutrientes. Las habichuelas son ricas en proteínas vegetales, fibra y minerales esenciales como el hierro y el magnesio, que ayudan a fortalecer los huesos y el sistema inmunológico.<br>
