--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -35,7 +35,7 @@
         <div class="pasos">
             <div>
                 <h2>Sopa de caldo "poncima"</h2>
-                <img src="../images/sopa_caldo_encima.jpg" alt="sopa caldo por encima" width="65%">
+                <img src="../images/sopa_caldo_encima.jpg" alt="Sopa caldo por encima" width="65%">
                 <h3>Descripción</h3>
                 <p>Es un plato tradicional de la provincia de Málaga que tiene distintas variantes y reciben distintos nombres según el pueblo donde se haga.
                     Como por ejemplo la sopa perota de Álora o la 'aplastá' en Pizarra.
