Se añade carrusel imagenes

--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -35,7 +35,27 @@
         <div class="pasos">
             <div>
                 <h2>Sopa de caldo "poncima"</h2>
-                <img src="../images/sopa_caldo_encima.jpg" alt="Sopa caldo por encima" width="65%">
+
+                <!-- Carrusel imágenes -->
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/sopa_caldo_encima.jpg" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima1.png" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima2.png" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima3.png" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima4.png" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima5.png" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima6.jpg" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima7.jpg" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima8.jpg" alt="Sopa caldo por encima">
+                        <img src="../images/sopa-caldo-encima/sopa-caldo-encima9.jpg" alt="Sopa caldo por encima">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>Es un plato tradicional de la provincia de Málaga que tiene distintas variantes y reciben distintos nombres según el pueblo donde se haga.
                     Como por ejemplo la sopa perota de Álora o la 'aplastá' en Pizarra.
