Se añade slider archivo cazuela-arroz

--- a/misRecetas/cazuela-arroz.html
+++ b/misRecetas/cazuela-arroz.html
@@ -35,7 +35,27 @@
         <div class="pasos">
             <div>
                 <h2>Cazuela de arroz</h2>
-                <img src="../images/cazuela-arroz.jpg" alt="Cazuela de arroz" width="65%">
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/cazuela-arroz.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz1.png" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz2.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz3.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz4.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz5.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz6.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz7.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz8.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz9.jpg" alt="Cazuela de arroz">
+                        <img src="../images/cazuela-arroz/cazuela-arroz10.jpg" alt="Cazuela de arroz">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+                
                 <h3>Descripción</h3>
                 <p>La cazuela de arroz o arroz caldoso con marisco o conejo es un plato típico de la comarca del Valle del Guadalhorce, se hace también con fideos, muy típico en zonas rurales de Pizarra y Coín.</p>
                 <p>Es un plato completo, sabroso y lleno de nutrientes, ideal como comida principal.</p>
