--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/cazuela-fideos.html#pasos"><img src="./images/defecto.png" alt="Cazuela de fideos"></a>
+                    <a href="./misRecetas/cazuela-fideos.html#pasos"><img src="./images/cazuela-fideos.jpg" alt="Cazuela de fideos"></a>
                     <p>Cazuela de fideos</p>
                 </div> 
             </div>
