--- a/misRecetas/cazuela-fideos.html
+++ b/misRecetas/cazuela-fideos.html
@@ -35,7 +35,7 @@
         <div class="pasos">
             <div>
                 <h2>Cazuela de fideos</h2>
-                <img src="../images/defecto.png" alt="Cazuela de fideos" width="65%">
+                <img src="../images/cazuela-fideos.jpg" alt="Cazuela de fideos" width="65%">
                 <h3>Descripción</h3>
                 <p>La cazuela de fideos es uno de los tipos de cazuela de la cocina tradicional malagueña, muy típico en zonas del Guadalhorce de Pizarra y Coín.</p>
                 <p>Desde el punto de vista nutricional, es un plato equilibrado:</p>
