Se añade ?v=2 a los link css, para eliminar caché del navegador

--- a/misRecetas/contacto.html
+++ b/misRecetas/contacto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/misRecetas.css">
-    <link rel="stylesheet" href="../css/hamburger.css">
+    <link rel="stylesheet" href="../css/style.css?v=2">
+    <link rel="stylesheet" href="../css/misRecetas.css?v=2">
+    <link rel="stylesheet" href="../css/hamburger.css?v=2">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 
