Se añade arroz-habichuelas.html

--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -34,6 +34,7 @@
                         <li><a href="./cazuela-pollo.html#pasos">Cazuela de patatas con pollo</a></li>
                         <li><a href="./cazuela-arroz.html#pasos">Cazuela de arroz</a></li>
                         <li><a href="./cazuela-fideos.html#pasos">Cazuela de fideos</a></li>
+                        <li><a href="./arroz-habichuelas.html#pasos">Arroz con habichuelas</a></li>
                     </ul>
                 </li>
         
@@ -83,6 +84,7 @@
             <option data-val="./cazuela-pollo.html#pasos" value="Cazuela de patatas con pollo"></option>
             <option data-val="./cazuela-arroz.html#pasos" value="Cazuela de arroz"></option>
             <option data-val="./cazuela-fideos.html#pasos" value="Cazuela de fideos"></option>
+            <option data-val="./arroz-habichuelas.html#pasos" value="Arroz con habichuelas"></option>
         </datalist>
     </div>
 </div>
