Se añaden imagenes

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/lentejas.html#pasos"><img src="./images/lentejas.png" alt="Lentejas"></a>
+                    <a href="./misRecetas/lentejas.html#pasos"><img src="./images/lentejas.jpg" alt="Lentejas"></a>
                     <p>Lentejas</p>
                 </div> 
 
@@ -156,12 +156,12 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/cazuela-costilla.html#pasos"><img src="./images/defecto.png" alt="Cazuela de patatas con costilla"></a>
+                    <a href="./misRecetas/cazuela-costilla.html#pasos"><img src="./images/cazuela-costilla.jpg" alt="Cazuela de patatas con costilla"></a>
                     <p>Cazuela de patatas (con costilla)</p>
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/cazuela-pollo.html#pasos"><img src="./images/defecto.png" alt="Cazuela de patatas con pollo"></a>
+                    <a href="./misRecetas/cazuela-pollo.html#pasos"><img src="./images/cazuela-pollo.png" alt="Cazuela de patatas con pollo"></a>
                     <p>Cazuela de patatas (con pollo)</p>
                 </div> 
 
