--- a/misRecetas/lentejas.html
+++ b/misRecetas/lentejas.html
@@ -35,7 +35,7 @@
         <div class="pasos">
             <div>
                 <h2>Lentejas</h2>
-                <img src="../images/lentejas.png" alt="Lentejas" width="65%">
+                <img src="../images/lentejas.jpg" alt="Lentejas" width="65%">
                 <h3>Descripción</h3>
                 <p>Las lentejas son una excelente fuente de nutrientes esenciales. 
                     Ricas en proteínas vegetales, fibra y minerales como el hierro y el magnesio, ayudan a fortalecer el sistema inmunológico y a mantener la salud digestiva. 
