--- a/misRecetas/pure-verduras.html
+++ b/misRecetas/pure-verduras.html
@@ -35,7 +35,23 @@
         <div class="pasos">
             <div>
                 <h2>Puré de Verduras</h2>
-                <img src="../images/pure1.jpg" alt="Puré de verduras" width="65%">
+                <!-- <img src="../images/pure1.jpg" alt="Puré de verduras" width="65%"> -->
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/pure1.jpg" alt="Puré de verduras">
+                        <img src="../images/pure-verduras/pure2.jpg" alt="Puré de verduras">
+                        <img src="../images/pure-verduras/pure3.jpg" alt="Puré de verduras">
+                        <img src="../images/pure-verduras/pure4.jpg" alt="Puré de verduras">
+                        <img src="../images/pure-verduras/pure5.jpg" alt="Puré de verduras">
+                        <img src="../images/pure-verduras/pure6.jpg" alt="Puré de verduras">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>Las verduras se convierten en una interesante fuente de vitaminas y nutrientes. Es por ello por lo que su consumo supone un refuerzo para el sistema inmunológico.</p>
                 <p>Son platos muy fáciles de digerir. Se pueden elegir las verduras que más nos gusten o se disponga en el momento en casa. Siempre son todas muy ricas.</p>
