Se añade galeria de imagenes a magro-tomates.html

--- a/misRecetas/magro-tomates.html
+++ b/misRecetas/magro-tomates.html
@@ -35,7 +35,26 @@
         <div class="pasos">
             <div>
                 <h2>Magro con Tomates</h2>
-                <img src="../images/magro-tomates.jpg" alt="Magro con tomates" width="65%">
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/magro-tomates.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates1.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates2.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates3.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates4.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates5.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates6.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates7.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates8.jpg" alt="Magro con tomates">
+                        <img src="../images/magro-tomates/magro-tomates9.jpg" alt="Magro con tomates">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>
                     El magro con tomates es una receta tradicional andaluza, muy popular en los bares de Málaga como tapa casera y sabrosa. 
