Se añade galeria de imagenes a lentejas.html

--- a/misRecetas/lentejas.html
+++ b/misRecetas/lentejas.html
@@ -35,7 +35,21 @@
         <div class="pasos">
             <div>
                 <h2>Lentejas</h2>
-                <img src="../images/lentejas.jpg" alt="Lentejas" width="65%">
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/lentejas.jpg" alt="Lentejas">
+                        <img src="../images/lentejas/lentejas2.jpg" alt="Lentejas">
+                        <img src="../images/lentejas/lentejas3.jpg" alt="Lentejas">
+                        <img src="../images/lentejas/lentejas4.jpg" alt="Lentejas">
+                        <img src="../images/lentejas/lentejas5.jpg" alt="Lentejas">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>Las lentejas son una excelente fuente de nutrientes esenciales. 
                     Ricas en proteínas vegetales, fibra y minerales como el hierro y el magnesio, ayudan a fortalecer el sistema inmunológico y a mantener la salud digestiva. 
