Se añade galeria de imagenes a habichuelas.html

--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -35,7 +35,22 @@
         <div class="pasos">
             <div>
                 <h2>Potaje de habichuelas o fabada</h2>
-                <img src="../images/habichuelas.png" alt="Fabada o habichuelas" width="65%">
+                <!-- <img src="../images/habichuelas.png" alt="Fabada o habichuelas" width="65%"> -->
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/habichuelas.png" alt="Fabada o habichuelas">
+                        <img src="../images/habichuelas/habichuelas1.jpg" alt="Fabada o habichuelas">
+                        <img src="../images/habichuelas/habichuelas2.jpg" alt="Fabada o habichuelas">
+                        <img src="../images/habichuelas/habichuelas3.jpg" alt="Fabada o habichuelas">
+                        <img src="../images/habichuelas/habichuelas4.jpg" alt="Fabada o habichuelas">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>
                     El potaje de habichuelas, o fabada, es una excelente fuente de nutrientes. Las habichuelas son ricas en proteínas vegetales, fibra y minerales esenciales como el hierro y el magnesio, que ayudan a fortalecer los huesos y el sistema inmunológico.<br>
