Se modifica imagen habichuelas

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/habichuelas.html#pasos"><img src="./images/habichuelas.png" alt="Potaje de habichuelas"></a>
+                    <a href="./misRecetas/habichuelas.html#pasos"><img src="./images/habichuelas-fabada.png" alt="Potaje de habichuelas"></a>
                     <p>Potaje de habichuelas o fabada</p>
                 </div> 
 
