--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -39,7 +39,7 @@
 
                 <div class="slider">
                     <div class="slider--inner">
-                        <img src="../images/habichuelas.png" alt="Fabada o habichuelas">
+                        <img src="../images/habichuelas-fabada.png" alt="Fabada o habichuelas">
                         <img src="../images/habichuelas/habichuelas1.jpg" alt="Fabada o habichuelas">
                         <img src="../images/habichuelas/habichuelas2.jpg" alt="Fabada o habichuelas">
                         <img src="../images/habichuelas/habichuelas3.jpg" alt="Fabada o habichuelas">
