Se añade galeria de imagenes a emblanco.html

--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -35,7 +35,22 @@
         <div class="pasos">
             <div>
                 <h2>En blanco</h2>
-                <img src="../images/emblanco.jpg" alt="En blanco" width="65%">
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/emblanco.jpg" alt="En blanco">
+                        <img src="../images/emblanco/emblanco1.jpg" alt="En blanco">
+                        <img src="../images/emblanco/emblanco2.jpg" alt="En blanco">
+                        <img src="../images/emblanco/emblanco3.jpg" alt="En blanco">
+                        <img src="../images/emblanco/emblanco4.jpg" alt="En blanco">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
+
                 <h3>Descripción</h3>
                 <p>Una de las sopas malagueñas más sencilla y tradicional es sin lugar a dudas el "en blanco". 
                     <br>Se trata de una sopa muy humilde cuya base es un caldo de pescado.</p>
