Se añade imagen a gazpachuelo.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/gazpachuelo.html#pasos"><img src="./images/gazpachuelo1.jpg" alt="Gazpachuelo"></a>
+                    <a href="./misRecetas/gazpachuelo.html#pasos"><img src="./images/gazpachuelo.png" alt="Gazpachuelo"></a>
                     <p>Gazpachuelo</p>
                 </div> 
 
