--- a/misRecetas/gazpachuelo.html
+++ b/misRecetas/gazpachuelo.html
@@ -36,7 +36,7 @@
         <div class="pasos">
             <div>
                 <h2>Gazpachuelo (con pescado)</h2>
-                <img src="../images/gazpachuelo1.jpg" alt="Gazpachuelo" width="65%">
+                <img src="../images/gazpachuelo.png" alt="Gazpachuelo" width="65%">
                 <h3>Descripción</h3>
                 <p>El gazpachuelo es una de las recetas más tradicionales de Málaga. Existen muchas versiones, todas con un magnífico sabor, suavidad y cremosidad.</p>
                 <p>El gazpachuelo malagueño tiene su origen entre los pescadores de la región. Elaboraban un caldo de pescado al que agregaban patata y daban sabor incorporando mayonesa.</p>
@@ -80,7 +80,7 @@
         <div class="pasos">
             <div>
                 <h2>Gazpachuelo (sin pescado)</h2>
-                <img src="../images/gazpachuelo2.jpg" alt="Gazpachuelo" width="65%">
+                <img src="../images/gazpachuelo.png" alt="Gazpachuelo" width="65%">
                 <h3>Descripción</h3>
                 <p>El gazpachuelo es una de las recetas más tradicionales de Málaga. Existen muchas versiones, todas con un magnífico sabor, suavidad y cremosidad.</p>
                 <p>El gazpachuelo malagueño tiene su origen entre los pescadores de la región. Elaboraban un caldo de pescado al que agregaban patata y daban sabor incorporando mayonesa.</p>
