Añado meta descripcion y datos estructurados JSON-LD para SEO

--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -3,7 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sopa de caldo por encima</title>
+    <title>Sopa de caldo 'poncima' – Receta tradicional de Málaga</title>
+    <!-- Meta descripción -->
+    <meta name="description" content="Descubre cómo preparar la tradicional sopa de caldo 'poncima'. Un plato malagueño con pan, patata, tomate y pimiento, reconfortante y lleno de sabor casero.">
+    <!-- Datos estructurados JSON-LD mínimos -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "Recipe",
+        "name": "Sopa de caldo 'poncima'",
+        "image": [
+          "https://recetasconsabor.es/images/sopa_caldo_encima.jpg",
+          "https://recetasconsabor.es/sopa-caldo-encima/sopa-caldo-encima1.png",
+          "https://recetasconsabor.es/sopa-caldo-encima/sopa-caldo-encima2.png",
+          "https://recetasconsabor.es/images/sopa-caldo-encima/sopa-caldo-encima3.png",
+          "https://recetasconsabor.es/images/sopa-caldo-encima/sopa-caldo-encima4.png"
+        ],
+        "description": "La sopa de caldo 'poncima' es una receta típica de Coín, elaborada con pan, patata, tomate y pimientos. Un plato humilde, nutritivo y lleno de tradición malagueña.",
+        "recipeIngredient": [
+          "Media cebolla",
+          "3 pimientos",
+          "2 tomates",
+          "1 cucharadita de pimiento molido",
+          "Hierbabuena",
+          "Aceite",
+          "3 o 4 patatas",
+          "Agua",
+          "Sal",
+          "Pan del día anterior en rebanadas finas",
+          "Sardinas o boquerones sin espina y fritos (opcional)"
+        ],
+        "recipeInstructions": [
+          "Hervir en una cacerola las patatas cortadas en rodajas finas con agua y sal. Reservar.",
+          "Trocear la cebolla, los pimientos y los tomates. Sofreírlos en una sartén con aceite.",
+          "Añadir al sofrito el pimiento molido y dejar un minuto a fuego suave.",
+          "Incorporar el sofrito a la cacerola con las patatas y el agua. Hervir unos minutos para mezclar sabores.",
+          "Verter la mezcla en una fuente donde previamente está el pan cortado en rodajas finas.",
+          "Opcional: añadir sardinas o boquerones fritos sin espina.",
+          "Agregar hierbabuena y dejar reposar un poco antes de servir.",
+          "Se puede acompañar con pepino, melón o uvas."
+        ],
+        "recipeCategory": "Sopas",
+        "recipeCuisine": "Cocina andaluza",
+        "author": {
+          "@type": "Person",
+          "name": "recetasconsabor.es"
+        }
+      }
+    </script>
+
     <link rel="stylesheet" href="../css/style.css?v=2">
     <link rel="stylesheet" href="../css/misRecetas.css?v=2">
     <link rel="stylesheet" href="../css/hamburger.css?v=2">
@@ -74,13 +122,13 @@
                 <li>Hierbabuena</li>
                 <li>Aceite</li>
                 <li>Unas 3 ó 4 patatas</li>
-                <li>2l. Agua</li>
+                <li>Agua</li>
                 <li>Sal</li>
-                <li>Pan bueno del día anterior</li>
+                <li>Pan del día anterior</li>
                 <li>Sardinas o boquerones sin espina y fritos (opcional)</li>
             </ul>
 
-            <h3>Pasos</h3>
+            <h3>Preparación</h3>
             <ol>
                 <li>En una cacerola se pone a hervir el agua con las patatas, cortadas en rodajas finas, y un poco de sal. Cuando estén cocidas reservar todo.</li>
                 <li>Mientras tanto troceamos la cebolla, pimiento, tomate y en una cacerola lo añadimos junto al aceite para hacer el sofrito.</li>
