Se añade galeria de imagenes a gazpachuelo.html

--- a/misRecetas/gazpachuelo.html
+++ b/misRecetas/gazpachuelo.html
@@ -36,7 +36,24 @@
         <div class="pasos">
             <div>
                 <h2>Gazpachuelo (con pescado)</h2>
-                <img src="../images/gazpachuelo.png" alt="Gazpachuelo" width="65%">
+                <!-- <img src="../images/gazpachuelo.png" alt="Gazpachuelo" width="65%"> -->
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/gazpachuelo.png" alt="Gazpachuelo">
+                        <img src="../images/gazpachuelo/gazpachuelo-varias.jpg" alt="Gazpachuelo">
+                        <img src="../images/gazpachuelo/gazpachuelo5.jpg" alt="Gazpachuelo">
+                        <img src="../images/gazpachuelo/gazpachuelo6.jpg" alt="Gazpachuelo">
+                        <img src="../images/gazpachuelo/gazpachuelo7.jpg" alt="Gazpachuelo">
+                        <img src="../images/gazpachuelo/gazpachuelo8.jpg" alt="Gazpachuelo">
+                        <img src="../images/gazpachuelo/gazpachuelo9.jpg" alt="Gazpachuelo">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>El gazpachuelo es una de las recetas más tradicionales de Málaga. Existen muchas versiones, todas con un magnífico sabor, suavidad y cremosidad.</p>
                 <p>El gazpachuelo malagueño tiene su origen entre los pescadores de la región. Elaboraban un caldo de pescado al que agregaban patata y daban sabor incorporando mayonesa.</p>
@@ -54,11 +71,11 @@
                 <li>2 huevos</li>
                 <li>Limón</li>
                 <li>Sal</li>
-                <li>Una rosada (700gr - 1k ) cortada en trozos</li>
+                <li>Una rosada (700gr - 1k) cortada en trozos</li>
                 <li>Gambas</li>
             </ul>
 
-            <h3>Pasos</h3>
+            <h3>Preparación</h3>
             <ol>
                 <li>En una cacerola ponemos el agua a hervir junto a las patatas cortadas en rodajas. Lo dejamos hirviendo a fuego medio hasta que las patatas estén cocidas.</li>
                 <li>Mientras tanto separamos las claras de las yemas.</li>
@@ -80,7 +97,18 @@
         <div class="pasos">
             <div>
                 <h2>Gazpachuelo (sin pescado)</h2>
-                <img src="../images/gazpachuelo.png" alt="Gazpachuelo" width="65%">
+                <!-- <img src="../images/gazpachuelo.png" alt="Gazpachuelo" width="65%"> -->
+
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/gazpachuelo.png" alt="Gazpachuelo">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
                 <h3>Descripción</h3>
                 <p>El gazpachuelo es una de las recetas más tradicionales de Málaga. Existen muchas versiones, todas con un magnífico sabor, suavidad y cremosidad.</p>
                 <p>El gazpachuelo malagueño tiene su origen entre los pescadores de la región. Elaboraban un caldo de pescado al que agregaban patata y daban sabor incorporando mayonesa.</p>
