Añado meta descripcion y datos estructurados JSON-LD para SEO en gazpachuelo.html

--- a/misRecetas/gazpachuelo.html
+++ b/misRecetas/gazpachuelo.html
@@ -3,7 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gazpachuelo</title>
+    <title>Gazpachuelo malagueño con pescado | Receta tradicional de Málaga</title>
+    <!-- Meta descripción -->
+    <meta name="description" content="Prepara el auténtico gazpachuelo malagueño, una sopa tradicional a base de patata, pescado, gambas y mayonesa. Cremosa, reconfortante y con todo el sabor de Málaga.">
+    <!-- Datos estructurados JSON-LD mínimos -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org/",
+        "@type": "Recipe",
+        "name": "Gazpachuelo malagueño (con pescado)",
+        "image": [
+            "https://recetasconsabor.es/images/gazpachuelo.png",
+            "https://recetasconsabor.es/images/gazpachuelo/gazpachuelo-varias.jpg",
+            "https://recetasconsabor.es/images/gazpachuelo/gazpachuelo5.jpg"
+        ],
+        "description": "El gazpachuelo malagueño es una sopa tradicional elaborada con patata, pescado blanco, gambas, clara de huevo y mayonesa diluida. Cremosa, suave y típica de la cocina de pescadores de Málaga.",
+        "recipeIngredient": [
+            "1 kg de patatas",
+            "1,6 litros de agua",
+            "200 ml de agua fría (para diluir la mayonesa)",
+            "Aceite de oliva",
+            "2 huevos",
+            "Zumo de limón",
+            "Sal",
+            "700 g - 1 kg de rosada (u otro pescado blanco) en trozos",
+            "Gambas"
+        ],
+        "recipeInstructions": [
+            "Hervir las patatas cortadas en rodajas en una cacerola con agua y sal hasta que estén cocidas.",
+            "Separar las claras de las yemas de los huevos. Reservar las claras.",
+            "Con las yemas preparar una mayonesa. Añadir poco a poco 200 ml de agua fría para diluirla suavemente y reservar.",
+            "Cuando las patatas estén listas, añadir la rosada, las gambas y un poco más de sal. Hervir hasta que el pescado esté cocido.",
+            "Añadir las claras de huevo, tapar y retirar del fuego para que se cuajen con el calor residual.",
+            "Dejar que el caldo pierda algo de calor.",
+            "Incorporar la mayonesa diluida poco a poco y sin remover demasiado para evitar que se corte.",
+            "Servir caliente."
+        ],
+        "recipeCategory": "Sopas",
+        "recipeCuisine": "Cocina andaluza",
+        "author": {
+            "@type": "Person",
+            "name": "recetasconsabor.es"
+        }
+    }
+    </script>
+
     <link rel="stylesheet" href="../css/style.css?v=2">
     <link rel="stylesheet" href="../css/misRecetas.css?v=2">
     <link rel="stylesheet" href="../css/hamburger.css?v=2">
@@ -69,7 +113,7 @@
                 <li>1,6 l. aprox. de agua + 200 ml. (para diluir la mayonesa)</li>
                 <li>Aceite de oliva</li>
                 <li>2 huevos</li>
-                <li>Limón</li>
+                <li>Zumo de un limón</li>
                 <li>Sal</li>
                 <li>Una rosada (700gr - 1k) cortada en trozos</li>
                 <li>Gambas</li>
