Se añade favicon

--- a/misRecetas/gazpachuelo.html
+++ b/misRecetas/gazpachuelo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="../images/chef-hat.png">
     <title>Gazpachuelo malagueño con pescado | Receta tradicional de Málaga</title>
     <!-- Meta descripción -->
     <meta name="description" content="Prepara el auténtico gazpachuelo malagueño, una sopa tradicional a base de patata, pescado, gambas y mayonesa. Cremosa, reconfortante y con todo el sabor de Málaga.">
