--- a/misRecetas/cazuela-arroz.html
+++ b/misRecetas/cazuela-arroz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="../images/chef-hat.png">
     <title>Cazuela de arroz</title>
     <link rel="stylesheet" href="../css/style.css?v=2">
     <link rel="stylesheet" href="../css/misRecetas.css?v=2">
