--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="../images/chef-hat.png">
     <title>Sopa de caldo 'poncima' – Receta tradicional de Málaga</title>
     <!-- Meta descripción -->
     <meta name="description" content="Descubre cómo preparar la tradicional sopa de caldo 'poncima'. Un plato malagueño con pan, patata, tomate y pimiento, reconfortante y lleno de sabor casero.">
