Se modifica enlace script js con ?v=2 por problema cache

--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -149,6 +149,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
