--- a/misRecetas/arroz-habichuelas.html
+++ b/misRecetas/arroz-habichuelas.html
@@ -116,6 +116,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
