--- a/misRecetas/cazuela-arroz.html
+++ b/misRecetas/cazuela-arroz.html
@@ -120,6 +120,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
