--- a/misRecetas/cazuela-costilla.html
+++ b/misRecetas/cazuela-costilla.html
@@ -97,6 +97,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
