--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -93,6 +93,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
