--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -102,6 +102,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
