--- a/misRecetas/lentejas.html
+++ b/misRecetas/lentejas.html
@@ -101,6 +101,6 @@
     </footer>
     
     <!-- JavaScript -->
-    <script src="../js/myScript.js"></script>
+    <script src="../js/myScript.js?v=2"></script>
 </body>
 </html>
