Se añade galeria de imagenes a cazuela-costilla.html

--- a/misRecetas/cazuela-costilla.html
+++ b/misRecetas/cazuela-costilla.html
@@ -36,7 +36,31 @@
         <div class="pasos">
             <div>
                 <h2>Cazuela de patatas (con costilla)</h2>
-                <img src="../images/cazuela-costilla.jpg" alt="Cazuela de patatas con costilla" width="65%">
+                <!-- <img src="../images/cazuela-costilla.jpg" alt="Cazuela de patatas con costilla" width="65%"> -->
+
+                <!-- Carrusel imágenes -->
+                <div class="slider">
+                    <div class="slider--inner">
+                        <img src="../images/cazuela-costilla.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-1.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-4.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-5.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-6.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-8.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-9.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-10.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-12.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-13.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-17.jpg" alt="Cazuela de patatas con costilla">
+                        <img src="../images/cazuela-patatas-costilla/cazuela-patatas-costilla-18.jpg" alt="Cazuela de patatas con costilla">
+                    </div>
+                </div>
+                <div class="controls">
+                    <button id="prev">←</button>
+                    <button id="next">→</button>
+                </div>
+
+
                 <h3>Descripción</h3>
                 <p>Esta cazuela de patatas con costilla de cerdo es un plato completo y reconfortante, ideal para disfrutar en familia.</p>
                 <p>Aporta proteínas de alta calidad gracias a la carne, carbohidratos complejos de las patatas y un buen equilibrio de vitaminas y minerales procedentes de las verduras como la zanahoria, el tomate y el pimiento.</p>
